Saving work before refactoring Mappers and data movement.